--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,9 @@
     <meta name="description" content="Les Petits Plâts - Home page." />
     <meta name="author" content="ClementAver" />
     <link rel="stylesheet" href="css/style.css" />
-    <script src="https://kit.fontawesome.com/23e60d5d3c.js" crossorigin="anonymous"></script>
+    <script defer src="js/models/Listbox.js"></script>
+    <script defer src="js/pages/index.js"></script>
+    <script defer src="https://kit.fontawesome.com/23e60d5d3c.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
@@ -34,10 +36,10 @@
     </form>
 
     <!-- tags division -->
-    <div></div>
+    <div class="tag-division"></div>
 
     <!-- filter division -->
-    <div></div>
+    <div class="filter-division"></div>
 
     <!-- recipes section -->
     <section></section>
