adds recipes cards (1/?)

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,10 @@
     <meta name="description" content="Les Petits Plâts - Home page." />
     <meta name="author" content="ClementAver" />
     <link rel="stylesheet" href="css/style.css" />
+    <script defer src="../data/recipes.js"></script>
+    <script defer src="js/factories/IngredientFactory.js"></script>
     <script defer src="js/models/Listbox.js"></script>
+    <script defer src="js/models/Recipe.js"></script>
     <script defer src="js/pages/index.js"></script>
     <script defer src="https://kit.fontawesome.com/23e60d5d3c.js" crossorigin="anonymous"></script>
   </head>
@@ -36,12 +39,12 @@
     </form>
 
     <!-- tags division -->
-    <div class="tag-division"></div>
+    <div class="tags"></div>
 
-    <!-- filter division -->
-    <div class="filter-division"></div>
+    <!-- filters division -->
+    <div class="filters"></div>
 
     <!-- recipes section -->
-    <section></section>
+    <section class="recipes"></section>
   </body>
 </html>
