adds css rules to handle the responsiveness of the listboxes.

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,9 @@
     <div class="tags"></div>
 
     <!-- filters division -->
-    <div class="filters"></div>
+    <div class="filters-container">
+      <div class="filters"></div>
+    </div>
 
     <!-- recipes section -->
     <section class="recipes"></section>
