--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <meta name="author" content="ClementAver" />
     <link rel="stylesheet" href="css/style.css" />
     <script defer src="../data/recipes.js"></script>
+    <script defer src="js/models/Tag.js"></script>
     <script defer src="js/models/Listbox.js"></script>
     <script defer src="js/models/Recipe.js"></script>
     <script defer src="js/pages/index.js"></script>
