adds constructors on Recipe and Tag classes.

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <script defer src="js/models/Tag.js"></script>
     <script defer src="js/models/Listbox.js"></script>
     <script defer src="js/models/Recipe.js"></script>
+    <script defer src="js/utils/Search.js"></script>
     <script defer src="js/pages/index.js"></script>
     <script defer src="https://kit.fontawesome.com/23e60d5d3c.js" crossorigin="anonymous"></script>
   </head>
