adds a result counter.

--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,7 @@
     </div>
 
     <!-- recipes section -->
+    <div class="results"></div>
     <section class="recipes"></section>
   </body>
 </html>
