adds imports/exports.

--- a/public/index.html
+++ b/public/index.html
@@ -8,13 +8,16 @@
     <meta name="description" content="Les Petits Plâts - Home page." />
     <meta name="author" content="ClementAver" />
     <link rel="stylesheet" href="css/style.css" />
+    <!--
     <script defer src="../data/recipes.js"></script>
     <script defer src="js/models/Tag.js"></script>
     <script defer src="js/models/Listbox.js"></script>
     <script defer src="js/models/Recipe.js"></script>
     <script defer src="js/utils/Search.js"></script>
     <script defer src="js/models/SearchBar.js"></script>
-    <script defer src="js/pages/index.js"></script>
+    -->
+    <script defer type="module" src="js/pages/index.js"></script>
+
     <script defer src="https://kit.fontawesome.com/23e60d5d3c.js" crossorigin="anonymous"></script>
   </head>
 
