--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,6 @@
     <meta name="description" content="Les Petits Plâts - Home page." />
     <meta name="author" content="ClementAver" />
     <link rel="stylesheet" href="css/style.css" />
-    <script defer type="module" src="js/pages/index.js"></script>
 
     <script defer src="https://kit.fontawesome.com/23e60d5d3c.js" crossorigin="anonymous"></script>
   </head>
@@ -40,5 +39,6 @@
     <!-- recipes section -->
     <div class="results"></div>
     <section class="recipes"></section>
+    <script type="module" src="js/pages/index.js"></script>
   </body>
 </html>
