--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Les Petits Plâts - Home page." />
     <meta name="author" content="ClementAver" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/prefixed/style.css" />
 
     <script defer src="https://kit.fontawesome.com/23e60d5d3c.js" crossorigin="anonymous"></script>
   </head>
